syntax = "proto3";

package user;

service UserService {
    rpc CreateUser (User) returns (Response);
    rpc GetUser (UserId) returns (User);
    rpc UpdateUser (User) returns (Response);
    rpc DeleteUser (UserId) returns (Response);
    rpc GetAllUsers (Empty) returns (UserList);
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message UserId {
    int32 id = 1;
}

message Response {
    string message = 1;
}

message Empty {}

message UserList {
    repeated User users = 1;
}
